--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,16 +1,20 @@
-<div class="card">
-    <div class="card-header">
-        <h3>Edit!</h3>
-    </div>
-    <form class="card-body">
-        <input type="hidden" name="post" value="{{post.id}}">
-    <label for="post-title" class="form-label">Title</label>
-    <input type="text" name="post-title" class="form-input" value="{{post.title}}">
-    <label for="post-body" class="form-label">Conetent</label>
-    <textarea name="post-body"  class="form-input" id="" cols="30" rows="10">{{post.body}}</textarea>
-<button class="button">Update!</button> 
-<button class="button">Delete!</button>
+<div class="post card">
+  <div class="card-header">
+    <h2>Edit Post</h2>
+  </div>
+  <form id="edit-post-form" class="card-body">
+    <input type="hidden" name="post-id" value="{{post.id}}" />
 
-    </form>
+    <label class="form-label" for="post-title">Title</label>
+    <input type="text" name="post-title" value="{{post.title}}" class="form-input" />
 
+    <label class="form-label" for="post-body">Content</label>
+    <textarea name="post-body" class="form-input">{{post.body}}</textarea>
+
+    <button type="submit" class="btn">Update</button>
+
+    <button type="button" id="delete-btn" class="btn">Delete</button>
+  </form>
 </div>
+
+<script src="../public/public/edit.js"></script>
