--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,19 @@
 <div class="card">
-    <div class="card-header">
-        <h3>Login</h3>
+  <div class="card-header">
+    <h2>Login</h2>
+  </div>
+  <form id="login-form" class="card-body">
+    <div>
+      <label for="username-input-login">Username</label>
+      <input type="text" id="username-input-login" />
     </div>
-    <form class="card-body">
-        <div>
-            <label for="username">Username</label>
-            <input type="text" id="username-input">
-
-        </div>
-        <div>
-            <label for="password">password</label>
-            <input type="text"  id="password-input">
-        </div>
-        <button class="button-primary">Submit!</button>
-        <a href="/signup">Click Here to Signup!</a>
-    </form>
+    <div>
+      <label for="password-input-login" class="form-label">Password</label>
+      <input type="password" id="password-input-login" />
+    </div>
+    <button type="submit" id="login-btn" class="btn">Login!</button>
+    <a type="button" href="/signup">Sign up instead</a>
+  </form>
 </div>
 
+<script src="/public/public/login.js"></script>
