--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -1,13 +1,16 @@
-<div class="card">
-    <div class="card-header">
-        <h3>Create a New Post!</h3>
-    </div>
-    <form class="card-body">
-        <label class="form-label">Title</label>
-        <input type="text" name="" class="form-input">
+<div class="post card">
+  <div class="card-header">
+    <h2>Create New Post</h2>
+  </div>
+  <form id="new-post-form" class="card-body">
+    <label class="form-label" for="post-title">Title</label>
+    <input type="text" name="post-title" class="form-input" />
 
-        <label for="body">Content!</label>
-        <textarea name="body"  cols="30" rows="10"></textarea>
-        <button class="button-primary">Submit!</button>
-    </form>
+    <label class="form-label" for="post-body">Content</label>
+    <textarea name="post-body" class="form-input"></textarea>
+
+    <button type="submit" class="btn">Create</button>
+  </form>
 </div>
+
+<script src="/public/public/newpost.js"></script>
