--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -32,7 +32,7 @@
     </section>
   {{/if}}
 
-  <form class="card">
+  <form id="new-comment-form" class="card">
     <div class="card-header">
       <h3>Add New Comment</h3>
     </div>
@@ -48,3 +48,5 @@
     </div>
   </form>
 </div>
+
+<script src="/public/public/comment.js"></script>
